--- a/complexes.css
+++ b/complexes.css
@@ -60,7 +60,7 @@
   text-transform: uppercase;
   color: #646971;
 }
-.complexcardadress {
+.complexcard-adress {
   margin: 0;
   font-size: 40px;
   font-weight: bold;
