--- a/src/complexes.css
+++ b/src/complexes.css
@@ -7,7 +7,7 @@
 .main {
   padding-top: 4rem;
   padding-bottom: 2.8rem;
-  background-image: url(img/background-1.png);
+  background-image: url(/public/background-1.png);
   background-repeat: repeat;
 }
 .contact-title {
